--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -40,7 +40,7 @@ display: none;
     display: none;
 }
 
- .home-page-summary__claim_subhead--br{
+ .homepage-summary__claim_subhead--br{
     display: none;
  }
 
@@ -152,7 +152,7 @@ display: none;
         }
 
     }
-    .home-page-summary__claim_subhead--br{
+    .homepage-summary__claim_subhead--br{
         display: flex;
     }
 }
@@ -444,4 +444,8 @@ span.summary-page__subhead_claim--br{
         display: none;
     }
 
+}
+
+.br__proof--me{
+    
 }
