--- a/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
@@ -375,6 +375,13 @@ display: block;
     }
 
 
+.arrow-dwn-svg{
+    // transform: rotate(180deg);
+    .st0{fill: rgba(20,20,20,.9);
+    stroke: $black;
+}
+}
+
 
 #svg__blue_a2--bg{
      #A_outline{
