--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -52,14 +52,14 @@ $zindex-tooltip:                    1070 !default; */
         modular-scale: perfect-fifth,
         grid-color   : orange,
     ),
-    // 64em: ( // 1024px
-    //     font-size    :9px,
-    //     line-height  : 1.5,
-    //     modular-scale: perfect-fifth,
-    //     grid-color   : purple,
-    // ),
+    64em: ( // 1024px
+        font-size    :8px,
+        line-height  : 1.5,
+        modular-scale: perfect-fifth,
+        grid-color   : purple,
+    ),
     78em: ( // 1248px
-        font-size    : 12px,
+        font-size    : 8px,
         line-height  : 1.5,
         modular-scale: perfect-fifth,
         grid-color   : blue,
