--- a/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_modules.scss
@@ -211,17 +211,20 @@ button{
     z-index: 1000;
     border-radius: 100%;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // text-align: center;
+    // align-self: center;
+    // align-content: center;
+    // padding: 0;
+    // line-height: 1;
+    // margin: 0;
 }
 
-.circle__button_content{
-    flex: 0 0 auto;
-}
 
 .expt__close--button {
-    background: $primary;
+    background: red;
     color: #fff;
     height: 6rem;
     width: 6rem;
@@ -229,7 +232,17 @@ button{
     right: 4rem;
     top: 4rem;
     font-size: 3em;
+    display: flex;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    // margin: 0;
+}
 
+.button__content{
+    flex: 1;
+    color: $white;
 }
 
 //
